--- a/timeline.html
+++ b/timeline.html
@@ -175,9 +175,10 @@
                     <h3>Material Received</h3>
                     <h4>01.Gettogether Trophy</h4>
                     <p>Trophy Material Received to Print Shop</p>
-                    <p>Job not started yet</p>
-                    <p>GM Not approved Material Cutting Progress</p>
-                    <small>Date: 2024-11-28</small>
+                    <p>Cutiing and Engrawing Finished</p>
+                    <p>Payment pending</p>
+                    <p>Have 3 Days For Finalizing </p>
+                    <small>Date: 2024-12-06</small>
                 </div>
             </div>
 
@@ -186,7 +187,8 @@
                     <h3>Job Starting</h3>
                     <p>Project implementation begins</p>
                     <p>Pending...</p>
-                    <small>Date: 2024-11-26</small>
+                    <small> <input type="date">
+                    </small>
                 </div>
             </div>
 
