--- a/timeline.html
+++ b/timeline.html
@@ -176,9 +176,9 @@
                     <h4>01.Gettogether Trophy</h4>
                     <p>Trophy Material Received to Print Shop</p>
                     <p>Cutiing and Engrawing Finished</p>
-                    <p>Payment pending</p>
+                     <p>Wood Based will finish 12/9</p>  
                     <p>Have 3 Days For Finalizing </p>
-                    <small>Date: 2024-12-06</small>
+                    <small>Date: 2024-12-08</small>
                 </div>
             </div>
 
@@ -207,7 +207,7 @@
             <div class="project">
                 <h2>Trophy Project</h2>
                 <div class="progress-bar">
-                    <div class="progress" style="width: 73%;"></div>
+                    <div class="progress" style="width: 79%;"></div>
                 </div>
                 <ul class="milestones">
                     <li>
@@ -237,6 +237,14 @@
                     <li>
                         <span>2024-12-07</span>
                         <small>Painting Pending</small>
+                    </li>
+                    <li>
+                        <span>2024-12-07</span>
+                        <small>A check was given</small>
+                    </li>
+                     <li>
+                        <span>2024-12-08</span>
+                        <small>Wood Base Finalizing</small>
                     </li>
                     <li>
                         <span>2024-12-10</span>
