--- a/gallery.html
+++ b/gallery.html
@@ -82,6 +82,12 @@
     <img src="./assets/T04.jpg" alt="Sample Photo 6">
     <img src="./assets/T05.jpg" alt="Sample Photo 7">
     <img src="./assets/T06.jpg" alt="Sample Photo 8">
+      <img src="./assets/T07.jpg" alt="Sample Photo 9">
+     <img src="./assets/T08.jpg" alt="Sample Photo 10">
+     <img src="./assets/T09.jpg" alt="Sample Photo 11">
+     <img src="./assets/T10.jpg" alt="Sample Photo 12">
+     <img src="./assets/T11.jpg" alt="Sample Photo 13">
+     <img src="./assets/T12.jpg" alt="Sample Photo 14">
 </div>
 
 <footer>
